--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -7,7 +7,7 @@
         <h3>drinks</h3>
         <!--show which user is logged in to the site-->
         {% if 'user' in session %}
-        <p>logged in: {{session.user}}</p>
+        <p class="center-align">logged in: {{session.user}}</p>
         {% endif %}
     </div>
     <!--search bar-->
