--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -5,169 +5,169 @@
 <!--content container-->
 <div class="container">
     <!--show which user is logge in to the site-->
-    <{% if 'user' in session %} <p>logged in: {{session.user}}</p>
-        {% endif %}
-        <!--Materialize card-->
-        <div class="row card-panel">
-            <!--form to allow input of new recipe to DB-->
-            <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
-                <!--add category name fromn dropdown-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-question-circle fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11">
-                        <select id="category_name" name="category_name" type="text" class="validate" required>
-                            <option value="" disabled selected>please choose</option>
-                            <!--jinja loop to pull category names from DB-->
-                            {% for category in categories %}
-                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                            {% endfor %}
-                        </select>
-                        <label for="category_name">recipe category</label>
-                    </div>
-                    <div class="col s1"></div>
+    {% if 'user' in session %}
+    <p class="center-align">logged in: {{session.user}}</p>
+    {% endif %}
+    <!--Materialize card-->
+    <div class="row card-panel">
+        <!--form to allow input of new recipe to DB-->
+        <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
+            <!--add category name fromn dropdown-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-question-circle fa-2x icon hide-on-small-only"></i>
                 </div>
-                <!--add recipe name-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-bread-slice fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11">
-                        <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
-                        <label for="recipe_name">recipe name</label>
-                    </div>
-                    <div class="col s1"></div>
+                <div class="input-field col s11">
+                    <select id="category_name" name="category_name" class="validate" required>
+                        <option value="" disabled selected>please choose</option>
+                        <!--jinja loop to pull category names from DB-->
+                        {% for category in categories %}
+                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endfor %}
+                    </select>
+                    <label for="category_name">recipe category</label>
                 </div>
-                <!--add recipe chef-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-user fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11">
-                        <input id="recipe_chef" name="recipe_chef" type="text" class="validate" required>
-                        <label for="recipe_chef">recipe chef</label>
-                    </div>
-                    <div class="col s1"></div>
+                <div class="col s1"></div>
+            </div>
+            <!--add recipe name-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-bread-slice fa-2x icon hide-on-small-only"></i>
                 </div>
-                <!--add recipe cookbook name-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-book fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11">
-                        <input id="cookbook_name" name="cookbook_name" type="text" class="validate" required>
-                        <label for="cookbook_name">recipe cookbook</label>
-                    </div>
-                    <div class="col s1"></div>
+                <div class="input-field col s11">
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
+                    <label for="recipe_name">recipe name</label>
                 </div>
-                <!--add recipe image URL-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-camera fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11">
-                        <input value="https://" id="recipe_image" name="recipe_image" type="text" class="validate"
-                            required>
-                        <label for="recipe_image">recipe image - add URL here</label>
-                    </div>
-                    <div class="col s1"></div>
+                <div class="col s1"></div>
+            </div>
+            <!--add recipe chef-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-user fa-2x icon hide-on-small-only"></i>
                 </div>
-                <!--add recipe difficulty-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-user-cog fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11">
-                        <select id="recipe_difficulty" name="recipe_difficulty" class="validate" required>
-                            <option value="" disabled selected>please choose</optin>
-                            <option value="Easy">Easy</option>
-                            <option value="Medium">Medium</option>
-                            <option value="Hard">Hard</option>
-                            <option value="You've Got to Be Kidding, Yotam!">You've Got to Be Kidding Me, Yotam!
-                            </option>
-                        </select>
-                        <label for="recipe_difficulty">recipe difficulty</label>
-                    </div>
-                    <div class="col s1"></div>
+                <div class="input-field col s11">
+                    <input id="recipe_chef" name="recipe_chef" type="text" class="validate" required>
+                    <label for="recipe_chef">recipe chef</label>
                 </div>
-                <!--add recipe time-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-clock fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11">
-                        <select id="recipe_time" name="recipe_time" class="validate" required>
-                            <option value="" disabled selected>please choose</optin>
-                            <option value="10 mins">10 mins</option>
-                            <option value="20 mins">20 mins</option>
-                            <option value="30 mins">30 mins</option>
-                            <option value="40 mins">40 mins</option>
-                            <option value="50 mins">50 mins</option>
-                            <option value="60 mins">60 mins</option>
-                            <option value="70 mins">70 mins</option>
-                            <option value="80 mins">80 mins</option>
-                            <option value="90 mins">90 mins</option>
-                            <option value="100 mins">100 mins</option>
-                            <option value="110 mins">110 mins</option>
-                            <option value="120 mins">120 mins</option>
-                            <option value="130 mins">130 mins</option>
-                            <option value="140 mins">140 mins</option>
-                            <option value="150 mins">150 mins</option>
-                            <option value="160 mins">160 mins</option>
-                            <option value="170 mins">170 mins</option>
-                            <option value="180 mins">180 mins</option>
-                            <option value="190 mins">190 mins</option>
-                            <option value="200 mins">200 mins</option>
-                            <option value="210 mins">210 mins</option>
-                            <option value="220 mins">220 mins</option>
-                            <option value="230 mins">230 mins</option>
-                            <option value="240 mins">240 mins</option>
-                        </select>
-                        <label for="recipe_time">recipe time</label>
-                    </div>
-                    <div class="col s1"></div>
+                <div class="col s1"></div>
+            </div>
+            <!--add recipe cookbook name-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-book fa-2x icon hide-on-small-only"></i>
                 </div>
-                <!--add recipe ingredients-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-list fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11 input_ing_wrap">
-                        <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate" required>
-                        <label for="recipe_ingredients">ingredients</label>
-                    </div>
+                <div class="input-field col s11">
+                    <input id="cookbook_name" name="cookbook_name" type="text" class="validate" required>
+                    <label for="cookbook_name">recipe cookbook</label>
                 </div>
-                <!--add extra recipe ingredients button-->
-                <div class="row">
-                    <div class="col s1">
-                        <a href="#" class="add_ing_button"><i class="far fa-plus-square"></i></a>
-                    </div>
+                <div class="col s1"></div>
+            </div>
+            <!--add recipe image URL-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-camera fa-2x icon hide-on-small-only"></i>
                 </div>
-                <!--add recipe method textarea-->
-                <div class="row">
-                    <div class="col s1">
-                        <i class="fas fa-list fa-2x icon hide-on-small-only"></i>
-                    </div>
-                    <div class="input-field col s11 input_meth_wrap">
-                        <textarea id="recipe_method" name="recipe_method" required></textarea>
-                        <label for="recipe_method">method</label>
-                    </div>
+                <div class="input-field col s11">
+                    <input value="https://" id="recipe_image" name="recipe_image" type="text" class="validate" required>
+                    <label for="recipe_image">recipe image - add URL here</label>
                 </div>
-                <!--add extra recipe method textarea-->
-                <div class="row">
-                    <div class="col s1">
-                        <a href="#" class="add_meth_button"><i class="far fa-plus-square"></i></a>
-                    </div>
+                <div class="col s1"></div>
+            </div>
+            <!--add recipe difficulty-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-user-cog fa-2x icon hide-on-small-only"></i>
                 </div>
-                <!--submit form to DB-->
-                <div class="row">
-                    <div class="col s12 center-align">
-                        <button class="btn" type="submit">add recipe</button>
-                    </div>
+                <div class="input-field col s11">
+                    <select id="recipe_difficulty" name="recipe_difficulty" class="validate" required>
+                        <option value="" disabled selected>please choose</option>
+                        <option value="Easy">Easy</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Hard">Hard</option>
+                        <option value="You've Got to Be Kidding, Yotam!">You've Got to Be Kidding Me, Yotam!
+                        </option>
+                    </select>
+                    <label for="recipe_difficulty">recipe difficulty</label>
                 </div>
-            </form>
-        </div>
+                <div class="col s1"></div>
+            </div>
+            <!--add recipe time-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-clock fa-2x icon hide-on-small-only"></i>
+                </div>
+                <div class="input-field col s11">
+                    <select id="recipe_time" name="recipe_time" class="validate" required>
+                        <option value="" disabled selected>please choose</option>
+                        <option value="10 mins">10 mins</option>
+                        <option value="20 mins">20 mins</option>
+                        <option value="30 mins">30 mins</option>
+                        <option value="40 mins">40 mins</option>
+                        <option value="50 mins">50 mins</option>
+                        <option value="60 mins">60 mins</option>
+                        <option value="70 mins">70 mins</option>
+                        <option value="80 mins">80 mins</option>
+                        <option value="90 mins">90 mins</option>
+                        <option value="100 mins">100 mins</option>
+                        <option value="110 mins">110 mins</option>
+                        <option value="120 mins">120 mins</option>
+                        <option value="130 mins">130 mins</option>
+                        <option value="140 mins">140 mins</option>
+                        <option value="150 mins">150 mins</option>
+                        <option value="160 mins">160 mins</option>
+                        <option value="170 mins">170 mins</option>
+                        <option value="180 mins">180 mins</option>
+                        <option value="190 mins">190 mins</option>
+                        <option value="200 mins">200 mins</option>
+                        <option value="210 mins">210 mins</option>
+                        <option value="220 mins">220 mins</option>
+                        <option value="230 mins">230 mins</option>
+                        <option value="240 mins">240 mins</option>
+                    </select>
+                    <label for="recipe_time">recipe time</label>
+                </div>
+                <div class="col s1"></div>
+            </div>
+            <!--add recipe ingredients-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-list fa-2x icon hide-on-small-only"></i>
+                </div>
+                <div class="input-field col s11 input_ing_wrap">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate" required>
+                    <label for="recipe_ingredients">ingredients</label>
+                </div>
+            </div>
+            <!--add extra recipe ingredients button-->
+            <div class="row">
+                <div class="col s1">
+                    <a href="#" class="add_ing_button"><i class="far fa-plus-square"></i></a>
+                </div>
+            </div>
+            <!--add recipe method textarea-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-list fa-2x icon hide-on-small-only"></i>
+                </div>
+                <div class="input-field col s11 input_meth_wrap">
+                    <textarea id="recipe_method" name="recipe_method" required></textarea>
+                    <label for="recipe_method">method</label>
+                </div>
+            </div>
+            <!--add extra recipe method textarea-->
+            <div class="row">
+                <div class="col s1">
+                    <a href="#" class="add_meth_button"><i class="far fa-plus-square"></i></a>
+                </div>
+            </div>
+            <!--submit form to DB-->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button class="btn" type="submit">add recipe</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 
 {% endblock %}
