--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -6,7 +6,7 @@
 <div class="container">
     <!--show which user is logged in to the site-->
     {% if 'user' in session %}
-    <p>logged in: {{session.user}}</p>
+    <p class="center-align">logged in: {{session.user}}</p>
     {% endif %}
     <!--Materialize card-->
     <div class="row card-panel">
