--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -8,7 +8,7 @@
             <h3>recipes</h3>
             <!--show which user is logged in to the site-->
             {% if 'user' in session %}
-            <p>logged in: {{session.user}}</p>
+            <p class="center-align">logged in: {{session.user}}</p>
             {% endif %}
         </div>
     </div>
