--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -131,7 +131,7 @@
                 <div class="input-field col s10 input_meth_wrap">
                     <!--jinja for loop to display every method entry in array-->
                     {% for step in recipe.recipe_method %}
-                    <textarea id="recipe_method" name="recipe_method" type="text">{{ step }}</textarea>
+                    <textarea id="recipe_method" name="recipe_method"></textarea>{{ step }}</textarea>
                     {% endfor %}
                 </div>
             </div>
