updted testing.md and main.js with whitespace removal

--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -51,7 +51,7 @@
                     <div class="row">
                         <span class="card-title activator rec-style"></span>{{ cookbook.cook_name }}<i
                             class="right"></i>
-                        <span class="card-title-book" id="rec-style">{{ cookbook.cookbook_name }}</span>
+                        <span class="card-title-book rec-style">{{ cookbook.cookbook_name }}</span>
                         <p class="book-chef">by {{ cookbook.cookbook_chef }}</p>
                         <hr>
                         <form class="hide" id="{{ cookbook.cookbook_chef }}"
