--- a/templates/edit_cookbook.html
+++ b/templates/edit_cookbook.html
@@ -74,7 +74,7 @@
             </div>
             <!--submit form info to DB-->
             <div class="row">
-                <a href="{{ url_for('all_books') }}" class="btn red left">cancel</a>
+                <a href="{{ url_for('all_books') }}" class="btn red-btn left">cancel</a>
                 <button type="submit" class="btn right">edit</button>
             </div>
         </form>
