--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -48,7 +48,7 @@
                     </div>
                     <!--submit form info to DB-->
                     <div class="row">
-                        <a href="{{ url_for('profile', username=session['user']) }}" class="btn red left">cancel</a>
+                        <a href="{{ url_for('profile', username=session['user']) }}" class="btn red-btn left">cancel</a>
                         <button type="submit" class="btn btn-login right">edit</button>
                     </div>
                 </form>
