--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -160,7 +160,7 @@
             </div>
             <!--submit form to DB-->
             <div class="row">
-                <a href="{{ url_for('all_recipes') }}" class="btn red left">cancel</a>
+                <a href="{{ url_for('all_recipes') }}" class="btn red-btn left">cancel</a>
                 <button type="submit" class="btn right">edit</button>
             </div>
         </form>
