--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -45,14 +45,14 @@
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn red left">delete</a><br>
+                            class="btn red-btn left">delete</a><br>
                     </div>
                     <!--jinja if statement to allow <a> tags to show if larder-admin is logged in-->
                     {% elif session.user|lower == "larderadmin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn red left">delete</a><br>
+                            class="btn red-btn left">delete</a><br>
                     </div>
                     {% endif %}
                     <div class="center-align">
