--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -29,7 +29,7 @@
                     <button type="submit" class="btn">
                         <i class="fas fa-search left"></i>search
                     </button>
-                    <a href="{{ url_for('all_recipes') }}" class="red btn">reset</a>
+                    <a href="{{ url_for('all_recipes') }}" class="red-btn btn">reset</a>
                 </div>
             </div>
         </form>
