--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,8 +40,15 @@ main, nav, footer {
 }
 
 .btn-large {
-    width: 100px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    background-color: #2c642e;
+    width: 150px;
+}
+
+.btn-large:hover {
+    background-color: #9ad39c;
+    color: #2c642e;
 }
 
 .btn-login {
