--- a/templates/mains.html
+++ b/templates/mains.html
@@ -49,7 +49,8 @@
                     <p>added by {{ recipe.recipe_added}}</p>
                     <hr>
                     <!--<a> tag to activate the show_recipe function-->
-                    <p class="recipe-p"><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
+                    <p class="recipe-p"><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}"
+                            class="btn full">Full
                             recipe...</a></p>
                 </div>
                 <!--Materialize card structure - reveal further info about recipe-->
@@ -76,7 +77,7 @@
                     </div>
                     {% endif %}
                     <div class="center-align">
-                        <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
+                        <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn full">Full
                             recipe...</a>
                     </div>
                 </div>
