--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon-32x32.png">
     <!--EmailJS script-->
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" type="text/javascript">
     </script>
     <script>
         (function () {
@@ -200,8 +200,10 @@
     </footer>
     <!--JS Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" type="text/javascript">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" type="text/javascript">
+    </script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src=" {{ url_for('static', filename='js/recipe.js') }}"></script>
     <script src="{{ url_for('static', filename='js/sendEmail.js') }}"></script>
