added missing alt info

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -17,9 +17,10 @@
             <!--Card 1-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image waves-effect waves-block waves-light" title="show starters">
+                    <div class="card-image waves-effect waves-block waves-light" title="prawn starter">
                         <!--image and FAB links to show recipes-->
-                        <a href="{{url_for('show_starters') }}"><img src="/static/images/starter.jpg" alt=""></a>
+                        <a href="{{url_for('show_starters') }}"><img src="/static/images/starter.jpg"
+                                alt="starter type food"></a>
                     </div>
                     <div class="card-content center-align">
                         <p>starters</p>
@@ -29,9 +30,10 @@
             <!--Card 2-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image waves-effect waves-block waves-light" title="show mains">
+                    <div class="card-image waves-effect waves-block waves-light" title="sea bass and potatoes">
                         <!--image and FAB links to show recipes-->
-                        <a href="{{url_for('show_mains') }}"><img src="/static/images/mains.jpg" alt=""></a>
+                        <a href="{{url_for('show_mains') }}"><img src="/static/images/mains.jpg"
+                                alt="main type food"></a>
                     </div>
                     <div class="card-content center-align">
                         <p>mains</p>
@@ -43,7 +45,8 @@
                 <div class="card cat-card">
                     <div class="card-image waves-effect waves-block waves-light" title="show desserts">
                         <!--image and FAB links to show recipes-->
-                        <a href="{{url_for('show_desserts') }}"><img src="/static/images/dessert.jpg" alt=""></a>
+                        <a href="{{url_for('show_desserts') }}"><img src="/static/images/dessert.jpg"
+                                alt="chocolate dessert"></a>
                     </div>
                     <div class="card-content center-align">
                         <p>desserts</p>
@@ -58,7 +61,8 @@
                 <div class="card cat-card">
                     <div class="card-image waves-effect waves-block waves-light" title="show sides">
                         <!--image and FAB links to show recipes-->
-                        <a href="{{url_for('show_sides') }}"><img src="/static/images/sides.jpg" alt=""></a>
+                        <a href="{{url_for('show_sides') }}"><img src="/static/images/sides.jpg"
+                                alt="side of carrots"></a>
                     </div>
                     <div class="card-content center-align">
                         <p>sides</p>
@@ -70,7 +74,8 @@
                 <div class="card cat-card">
                     <div class="card-image waves-effect waves-block waves-light" title="show cakes">
                         <!--image and FAB links to show recipes-->
-                        <a href="{{url_for('show_cakes') }}"><img src="/static/images/biscuits.jpg" alt=""></a>
+                        <a href="{{url_for('show_cakes') }}"><img src="/static/images/biscuits.jpg"
+                                alt="chocolate bourbon"></a>
                     </div>
                     <div class="card-content center-align">
                         <p>cakes & biscuits</p>
@@ -82,7 +87,8 @@
                 <div class="card cat-card">
                     <div class="card-image waves-effect waves-block waves-light" title="show drinks">
                         <!--image and FAB links to show recipes-->
-                        <a href="{{url_for('show_drinks') }}"><img src="/static/images/drink.jpg" alt=""></a>
+                        <a href="{{url_for('show_drinks') }}"><img src="/static/images/drink.jpg"
+                                alt="cocktail glass with manhattan"></a>
                     </div>
                     <div class="card-content center-align">
                         <p>drinks</p>
