--- a/templates/edit_cookbook.html
+++ b/templates/edit_cookbook.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="input-field col s10">
                     <textarea id="cookbook_desc" name="cookbook_desc"
-                        class="validate">{{ cookbook.cookbook_desc }}</textarea>
+                        class="materialize-textarea validate">{{ cookbook.cookbook_desc }}</textarea>
                     <label for="cookbook_desc">cookbook description</label>
                 </div>
                 <div class="col s1"></div>
