--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -150,7 +150,8 @@
                     <i class="fas fa-list fa-2x icon hide-on-small-only"></i>
                 </div>
                 <div class="input-field col s11 input_meth_wrap">
-                    <textarea id="recipe_method" name="recipe_method" required></textarea>
+                    <textarea id="recipe_method" name="recipe_method" class="materialize-textarea validate"
+                        required></textarea>
                     <label for="recipe_method">method</label>
                 </div>
             </div>
