--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -86,8 +86,8 @@
         </div>
         {% endfor %}
     </div>
-    {%    <!--else statement if no search results are found-->
-        {% else %}
+    <!--else statement if no search results are found-->
+    {% else %}
     <div class="center-align">
         <h3>Oh No!</h3>
         <img class="sad-face" src="static/images/sad-face.png" alt="sad face">
