--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon-32x32.png">
     <!--EmailJS script-->
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" type="text/javascript">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" type="text/javascript"></script>
     <script>
         (function () {
             emailjs.init("user_DVkNxxKRBYWrwb59uZtBs");
         })();
     </script>
-
     <title>larder</title>
 </head>
 
@@ -71,8 +69,6 @@
             <li><a href="{{ url_for('show_cakes') }}" class="center-align">cakes and biscuits</a></li>
             <li><a href="{{ url_for('show_drinks') }}" class="center-align">drinks</a></li>
         </ul>
-
-
         <!--Materialize side nav bar for mobile/smaller devices-->
         <ul class="sidenav" id="mobile-demo">
             <li>
@@ -120,12 +116,9 @@
             {% endif %}
         </ul>
         <!--dropdown content for side nav-->
-
     </header>
-
     <!--flash message section for confirmation messages-->
     <section>
-
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for message in messages %}
@@ -135,20 +128,14 @@
         {% endfor %}
         {% endif %}
         {% endwith %}
-
     </section>
-
     <!--main content section for all templatge pages-->
     <main>
         <!--Back to top button-->
         <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="far fa-arrow-alt-circle-up"></i></button>
-
         {% block content %}
-
         {% endblock%}
-
     </main>
-
     <!--Materialize footer-->
     <footer class="page-footer">
         <div class="container">
@@ -156,7 +143,8 @@
                 <div class="col l4 s12 center-align">
                     <h5 class="white-text">larder</h5>
                     <p class="grey-text text-lighten-4">a collection of your favourite recipes from your favourite
-                        cooks and chefs!</p>
+                        cooks and chefs!
+                    </p>
                 </div>
                 <div class="col l4 s12 center-align">
                     <h5 class="white-text">social</h5>
@@ -193,17 +181,13 @@
         <div class="footer-copyright">
             <div class="container center-align">
                 © 2021 larder
-
             </div>
         </div>
-
     </footer>
     <!--JS Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
-    </script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src=" {{ url_for('static', filename='js/recipe.js') }}"></script>
     <script src="{{ url_for('static', filename='js/sendEmail.js') }}"></script>
