--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-
 <!--page background image container-->
 <div class="bg-container">
     <!--content container-->
     <div class="container">
         <div class="row landing">
-
             <div class="col s12 l6 center-align">
                 <h3>larder</h3>
             </div>
@@ -19,21 +17,20 @@
                     <!--jinja for loop restriciting the addition of recipes unless the user is logged in to the site-->
                     {% if session.user|lower %}
                     <li class="center-align"><a class="land-link" href="{{ url_for('add_recipe') }}">add your own
-                            favourite recipes!</a></li>
+                            favourite recipes!</a>
+                    </li>
                     <!--redirects user to log in page if they haven't logged in-->
                     {% else %}
                     <li class="center-align"><a class="land-link" href="{{ url_for('login') }}">add your own
-                            favourite recipes!</a></li>
+                            favourite recipes!</a>
+                    </li>
                     {% endif %}
                     <li class="center-align"><a class="land-link" href="{{ url_for('all_books') }}">look for new
-                            cookbooks!</a></li>
+                            cookbooks!</a>
+                    </li>
                 </ul>
-
             </div>
-
         </div>
-
     </div>
 </div>
-
 {% endblock %}
