added edit icon to edit_cookbook

--- a/templates/edit_cookbook.html
+++ b/templates/edit_cookbook.html
@@ -74,7 +74,7 @@
             <!--submit form info to DB-->
             <div class="row">
                 <a href="{{ url_for('all_books') }}" class="btn red-btn left">cancel</a>
-                <button type="submit" class="btn right">edit</button>
+                <button type="submit" class="btn right"><i class="far fa-edit">edit</button>
             </div>
         </form>
     </div>
