--- a/templates/starters.html
+++ b/templates/starters.html
@@ -65,13 +65,13 @@
                     <span>Cooking Time:</span><span class="right">{{ recipe.recipe_time }}</span>
                     <!--jinja if statement to allow <a> tags to show if the user is created the recipe and is logged in-->
                     {% if session.user|lower == recipe.recipe_added|lower %}
-                    <div class="row center-align rec-card">
+                    <div class="row center-align rec-btn">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn center-align"><i
                                 class="far fa-edit"></i>edit</a>
                     </div>
                     <!--if larder-admin is logged in they are able to edit or delete it from the DB-->
                     {% elif session.user|lower == "larderadmin"|lower %}
-                    <div class="row center-align rec-card">
+                    <div class="row center-align rec-btn">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="red-btn center-align"><i
                                 class="far fa-edit"></i>edit</a>
                     </div>
